Bug#27327 information_schema status views, variable_value conversion Type of 'Slave_running' status variable is changed to bool